--- a/FoodCalculator/PersonalWeightStatistic.resx
+++ b/FoodCalculator/PersonalWeightStatistic.resx
@@ -117,4 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAD2SURBVDhPYxi8IHnm4f9QJulALG3pfxCGckkDII2la6+Q
+        ZwBIU87qq/+Neo6RbgCyZpMJp8EGEMJQrQjNJj0nwJptZl78bzvv2n/nFQ/+u2549t9z25v/Pns+grHL
+        Lgjuuvjlv37djv8YNltOvwg2AKYZhEEabLZ//G+25eN//Q3v/2utfvu/5fQHiAEgoFa26X/H/odgjfYL
+        bvwPXv8YrABkCwi3XvwKxyBxEG44/u6/Xu12hDdAhrQfffFff+Hd/47rgTTQdJACfBiqFQFAmqpPfvhv
+        s+kNwnmkApDG+ovfyTcABECaKTIABHIXnabMAOIAAwMAa/fyx2+rNS0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
